# example-streaming-app

./: README.md  app.py
.github/ISSUE_TEMPLATE/: share-streaming-insights.md
backend/cs/: README.md
backend/cs/memgraph-streaming/: Program.cs  memgraph-streaming.csproj
backend/go/: README.md  app.go
backend/java/: README.md
backend/java/memgraph-streaming/: .gitignore  .project  pom.xml
backend/node/: .eslintrc.js  README.md  index.js  package-lock.json  package.json
backend/node/scripts/kafka/: start.sh
backend/node/scripts/kafka/data/: simple.txt
backend/node/scripts/memgraph/: start.sh
backend/node/scripts/memgraph/queries/: create_constraint.gql  (+4 more)
backend/node/src/: index.js
backend/python/: README.md  app.py  requirements.txt
backend/rust/: Cargo.toml  README.md
backend/rust/src/: main.rs
kafka/: .gitignore  README.md  run.sh  start.sh
kafka/producer/: input.csv  producer.py  static_producer.py  stream_producer.py
memgraph/: README.md  run.sh  trigger.cypher
memgraph/gqlalchmey/: main.py  requirements.txt
memgraph/queries/: create_constraint.cypher  create_index.cypher  create_node_trigger.cypher  create_stream.cypher  create_update_neighbors_trigger.cypher  create_update_neighbours_trigger.cypher  drop_constraint.cypher  drop_index.cypher  drop_node_trigger.cypher  drop_stream.cypher  drop_trigger.cypher  drop_triggers.cypher  drop_update_neighbors_trigger.cypher  show_constraints.gql  show_indexes.cypher  show_streams.cypher  show_triggers.cypher  start_stream.cypher
memgraph/query_modules/: kafka.py  kafka_stream.py
(+3 files in other folders)
